--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 
   <hr>
-  <a href="A:\Web Development\hobbies.html">My Hobbies</a>
-  <a href="A:\Web Development\contact-me.html">Contact Me</a>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">Contact Me</a>
 
 </body>
 
